[package]
name = "latlon"
version = "0.1.0"
authors = ["Ondřej Hruška <ondra@ondrovo.com>"]
description = "Parse latitude/longitude from many common formats"
edition = "2018"
readme = "README.md"
repository = "https://git.ondrovo.com/packages/latlon"
keywords = ["gps", "geo", "geography", "geospatial", "location", "parse"]
categories = ["parser-implementations", "science"]
license = "MIT"

[dependencies]
geo-types = "0.5.0"
regex = "1.3.7"
lazy_static = "1.4.0"
